[package]
name = "cuenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/cuenv-cli"
keywords.workspace = true
categories = ["command-line-utilities", "config", "development-tools"]
readme = "../../readme.md"
description = "Event-driven CLI with inline TUI for cuenv"

[[bin]]
name = "cuenv"
path = "src/main.rs"

[lints]
workspace = true

[features]
default = ["dagger-backend", "github", "gitlab", "bitbucket", "buildkite"]
dagger-backend = ["dep:cuenv-dagger"]
# Platform-specific providers
github = ["dep:cuenv-github"]
gitlab = ["dep:cuenv-gitlab"]
bitbucket = ["dep:cuenv-bitbucket"]
buildkite = ["dep:cuenv-buildkite"]
# Enable all platforms
all-platforms = ["github", "gitlab", "bitbucket", "buildkite"]

[[test]]
name = "bdd"
harness = false

[dependencies]
cuenv-codeowners = { workspace = true }
cuenv-core = { workspace = true }
cuenv-cubes = { workspace = true }
cuenv-dagger = { workspace = true, optional = true }
cuenv-ci = { workspace = true }
cuenv-events = { workspace = true }
cuenv-ignore = { workspace = true }
cuenv-release = { workspace = true }
cuengine = { workspace = true }
# Platform-specific providers (optional)
cuenv-github = { workspace = true, optional = true }
cuenv-gitlab = { workspace = true, optional = true }
cuenv-bitbucket = { workspace = true, optional = true }
cuenv-buildkite = { workspace = true, optional = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
walkdir = "2.5"
dirs = { workspace = true }
ctrlc = "3.4"
similar = "2.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = { workspace = true }
cucumber = { workspace = true }
tokio-test = { workspace = true }
sha2 = { workspace = true }
assert_cmd = "2.1.1"
predicates = "3.1.3"
which = "8.0.0"
