[package]
name = "cuenv-events"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords = ["events", "tracing", "structured-logging"]
categories = ["development-tools"]
description = "Structured event system for cuenv - enables multiple UI frontends via unified event stream"

[features]
default = ["spinner"]
# Build the indicatif-backed SpinnerRenderer.
# Renderers that don't need a terminal (JSON, future web) can opt out
# with `default-features = false` to drop the indicatif dependency.
spinner = ["dep:indicatif"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "rt"] }

# Identifiers and time
uuid = { workspace = true }
chrono = { workspace = true }

# Errors
thiserror = { workspace = true }

# Progress / spinners (gated)
indicatif = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }

[lints]
workspace = true
