[package]
name = "cuenv-gcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GCP integration for the cuenv ecosystem"

[lints]
workspace = true

[dependencies]
cuenv-secrets = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# GCP Secret Manager
google-secretmanager1 = "6"
hyper-rustls = { version = "0.27", features = ["http2"] }
hyper-util = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
