[package]
name = "cuenv-gcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Google Cloud Secret Manager integration for the cuenv ecosystem"

[lints]
workspace = true

[dependencies]
cuenv-secrets = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
