[package]
name = "cuenv-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "development-tools::build-utils"]
readme = "../../readme.md"
description = "GitHub provider implementations for cuenv"

[lints]
workspace = true

[features]
default = ["codeowners", "ci"]
codeowners = ["dep:cuenv-codeowners"]
ci = ["dep:cuenv-ci", "dep:octocrab", "dep:async-trait"]

[dependencies]
cuenv-core = { workspace = true }
cuenv-codeowners = { workspace = true, optional = true }
cuenv-ci = { workspace = true, optional = true }
octocrab = { version = "0.48", optional = true }
async-trait = { version = "0.1", optional = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
