[package]
name = "cuenv-github"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "development-tools::build-utils"]
readme = "../../readme.md"
description = "GitHub provider implementations for cuenv"

[lints]
workspace = true

[features]
default = ["codeowners", "ci", "workflow"]
codeowners = ["dep:cuenv-codeowners"]
ci = ["dep:cuenv-ci", "dep:octocrab", "dep:async-trait"]
workflow = ["dep:cuenv-ci", "dep:serde", "dep:serde_yaml", "dep:indexmap"]

[dependencies]
cuenv-core = { workspace = true }
cuenv-codeowners = { workspace = true, optional = true }
cuenv-ci = { workspace = true, optional = true }
octocrab = { version = "0.48", optional = true, default-features = false, features = ["rustls", "rustls-ring", "default-client", "timeout", "retry"] }
async-trait = { version = "0.1", optional = true }
serde = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
indexmap = { version = "2.7", features = ["serde"], optional = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
