[package]
name = "cuenv-infisical"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Infisical integration for the cuenv ecosystem"

[lints]
workspace = true

[dependencies]
cuenv-secrets = { workspace = true, features = ["http"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
temp-env = { workspace = true }
