[package]
name = "cuenv-release"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["development-tools", "command-line-utilities"]
readme = "../../readme.md"
description = "Native release management for cuenv - versioning, changelogs, and publishing"

[lints]
workspace = true

[dependencies]
cuenv-core = { workspace = true }
cuenv-workspaces = { workspace = true, features = ["discovery-rust", "parsers-rust"] }
cuenv-events = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
petgraph = { workspace = true }
git-conventional = { workspace = true }
gix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
