[package]
name = "cuenv-remote"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
cuenv-core.workspace = true
miette.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true

# gRPC dependencies
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test.workspace = true
tempfile.workspace = true
