[package]
name = "schema-validator"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0"
description = "CLI tool that validates cuenv schemas against JSON Schema"
repository = "https://github.com/cuenv/cuenv"
homepage = "https://github.com/cuenv/cuenv"
readme = "../../readme.md"
keywords = ["cue", "validation", "schema"]
categories = ["command-line-utilities", "config"]

[dependencies]
cuenv-core = { workspace = true }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
jsonschema = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.9"
