[package]
name = "schema-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool that validates cuenv schemas against JSON Schema"
repository.workspace = true
homepage.workspace = true
readme = "../../readme.md"
keywords = ["cue", "validation", "schema"]
categories = ["command-line-utilities", "config"]
publish = false

[dependencies]
cuenv-core = { workspace = true }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
jsonschema = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.0"
proptest = "1.0"
